# ai-service-template

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py  config.py  main.py  models.py
tests/: test_app.py  test_config.py
